exports[`handleAuthSaga should start taks to watch REGISTER_SUBMIT 1`] = `
Object {
  "@@redux-saga/IO": true,
  "FORK": Object {
    "args": Array [
      "REGISTER_SUBMIT",
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`

exports[`handleAuthSaga should start task to watch LOGIN_SUBMIT 1`] = `
Object {
  "@@redux-saga/IO": true,
  "FORK": Object {
    "args": Array [
      "LOGIN_SUBMIT",
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`

exports[`login requestLogin generator should call axios.post 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://simplel.de:6392/login",
      Object {
        "test": "test",
      },
      Object {
        "headers": Object {
          "Content-Type": "application/json",
        },
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`

exports[`login requestLogin generator should put LOGIN_ERROR action 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "LOGIN_ERROR",
    },
    "channel": null,
  },
}
`

exports[`login requestLogin generator should put LOGIN_SUCCESS action with payload 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Object {
        "email": "foo@bar.com",
        "id": 1,
        "name": "foo",
        "token": "abc123",
      },
      "type": "LOGIN_SUCCESS",
    },
    "channel": null,
  },
}
`

exports[`register requestRegister generator should call axios.post 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://simplel.de:6392/users",
      Object {
        "test": "test",
      },
      Object {
        "headers": Object {
          "Content-Type": "application/json",
        },
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`

exports[`register requestRegister generator should put REGISTER_ERROR action 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": "Some error",
      "type": "REGISTER_ERROR",
    },
    "channel": null,
  },
}
`

exports[`register requestRegister generator should put REGISTER_SUCCESS action with payload 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": "Registrierung erfolgreich!",
      "type": "GLOBAL_MESSAGE",
    },
    "channel": null,
  },
}
`
